Thread communicates with controller